--- a/calendar.html
+++ b/calendar.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Durga Mandir</title>
-  <link rel="shortcut iconImages/favicon.png" type="image/x-icon">
+  <link rel="shortcut icon" href="Images/favicon.png" type="image/x-icon">
   <link rel="stylesheet" href="css/calendar.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Google Font Link for Icons -->
