--- a/imagevideo.html
+++ b/imagevideo.html
@@ -70,7 +70,7 @@
         <img src="Images2/1.jpg">
         <img src="Images2/2.jpg">
         <img src="Images2/11.jpg">
-        <img src="Images/14.jpg">
+        <img src="Images2/14.jpg">
       
       </div>
 
