--- a/calendar.html
+++ b/calendar.html
@@ -46,8 +46,8 @@
 
   <div class="container-fluid banner">
     <h1 class="display-4 heading text-gold">जय माँ दुर्गा</h1>
-    <p class="headingp font">The Temple Of Goddess <span id="maadurga">Maa Durga</span> <br> Which is located in
-      Jatahi-2, Nagrain<br> Municipality (Dhanusha), NEPAL</p>
+    <p class="headingp font">The Temple of Goddess <span id="maadurga">Maa Durga</span> <br> located in Jatahi-2,
+      Nagrain<br> Municipality, Dhanusha, NEPAL</p>
   </div>
 
   
