--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   </nav>
   <div class="container-fluid banner">
     <h1 class="display-4 heading text-gold">जय माँ दुर्गा</h1>
-    <p class="headingp font">The Temple of Goddess <span id="maadurga">Maa Durga</span> <br> located in Jatahi-2,
+    <p class="headingp font">The Temple of Goddess <span id="maadurga">Maa <br> Durga</span> located in Jatahi-2,
       Nagrain<br> Municipality, Dhanusha, NEPAL</p>
   </div>
 
