--- a/memberscurrent.html
+++ b/memberscurrent.html
@@ -328,7 +328,7 @@
 
   <!------------------------------------copy right footer--------------------------->
 
-  <footer class="site-footer">
+  <footer class="site-footer font">
     <p>&copy; 2024 Sujay Mahato. All rights reserved.</p>
   </footer>
 
