--- a/imagevideo.html
+++ b/imagevideo.html
@@ -67,7 +67,12 @@
 
 
   <!------------------------------------image section--------------------------->
-
+  <div class="container gallery my-3">
+    <div class="heading1">
+        <h2>Image <span>Gallery</span></h2>
+    </div>
+</div>
+  
   <div class="image-gallery-container">
     <div class="image-container">
       <div class="image-card" onclick="openGallery('galleryCustomModal1')">
